--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -9,8 +9,8 @@ allow 2001:1b60:3:239:1003:106:0:1;
 allow 2001:40e8:0:f090::100;
 allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
+allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
-allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::205a;
 allow 2001:41d0:701:1100::38fc;
@@ -18,6 +18,7 @@ allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
@@ -110,6 +111,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -247,15 +249,14 @@ allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
-allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
+allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
 allow 2620:18c:0:192::144;
 allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
-allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
@@ -662,6 +663,8 @@ allow 2a0f:df00:0:255::204;
 allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
+allow 2a0f:e586:f:f::182;
+allow 2a10:1fc0:1::1078:9b3b;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
