--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,10 +111,9 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
-set_real_ip_from 128.127.180.156;
-set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
@@ -134,12 +133,13 @@ set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
+set_real_ip_from 146.19.143.82;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
-set_real_ip_from 146.59.35.38;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
+set_real_ip_from 151.80.148.159;
 set_real_ip_from 152.53.35.204;
 set_real_ip_from 152.89.233.169;
 set_real_ip_from 154.16.116.61;
@@ -634,6 +634,7 @@ set_real_ip_from 193.189.100.204;
 set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
+set_real_ip_from 193.218.118.182;
 set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.102;
@@ -683,7 +684,6 @@ set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.250.165;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.251.78;
-set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
@@ -700,8 +700,8 @@ set_real_ip_from 200.122.181.2;
 set_real_ip_from 2001:40e8:0:f090::100;
 set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::9dce;
+set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
-set_real_ip_from 2001:41d0:601:1100::108e;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::205a;
 set_real_ip_from 2001:41d0:701:1100::38fc;
@@ -709,6 +709,7 @@ set_real_ip_from 2001:41d0:701:1100::4434;
 set_real_ip_from 2001:41d0:701:1100::4f60;
 set_real_ip_from 2001:41d0:800:1f70::;
 set_real_ip_from 2001:41d0:801:2000::15bb;
+set_real_ip_from 2001:41d0:a:5c0::1;
 set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
@@ -801,6 +802,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -864,15 +866,14 @@ set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
 set_real_ip_from 23.129.64.139;
-set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
+set_real_ip_from 23.129.64.142;
 set_real_ip_from 23.129.64.143;
 set_real_ip_from 23.129.64.144;
 set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
-set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.210;
 set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
@@ -1075,15 +1076,14 @@ set_real_ip_from 2620:18c:0:192::136;
 set_real_ip_from 2620:18c:0:192::137;
 set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
-set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
+set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
 set_real_ip_from 2620:18c:0:192::144;
 set_real_ip_from 2620:18c:0:192::145;
 set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
-set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
@@ -1491,6 +1491,8 @@ set_real_ip_from 2a0f:df00:0:255::204;
 set_real_ip_from 2a0f:df00:0:255::205;
 set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
+set_real_ip_from 2a0f:e586:f:f::182;
+set_real_ip_from 2a10:1fc0:1::1078:9b3b;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1512,11 +1514,13 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
+set_real_ip_from 34.193.118.250;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
 set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
+set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
 set_real_ip_from 37.228.129.63;
 set_real_ip_from 37.252.255.135;
@@ -1584,11 +1588,11 @@ set_real_ip_from 45.9.150.130;
 set_real_ip_from 45.92.1.74;
 set_real_ip_from 45.94.31.143;
 set_real_ip_from 45.94.31.180;
+set_real_ip_from 45.95.146.83;
 set_real_ip_from 45.95.169.184;
 set_real_ip_from 45.95.169.225;
 set_real_ip_from 45.95.169.226;
 set_real_ip_from 45.95.169.227;
-set_real_ip_from 45.95.169.228;
 set_real_ip_from 45.95.169.229;
 set_real_ip_from 45.95.169.230;
 set_real_ip_from 45.95.169.255;
@@ -1646,7 +1650,6 @@ set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
 set_real_ip_from 5.39.25.229;
-set_real_ip_from 54.198.226.31;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1797,6 +1800,10 @@ set_real_ip_from 94.103.124.90;
 set_real_ip_from 94.103.124.91;
 set_real_ip_from 94.103.124.98;
 set_real_ip_from 94.131.110.58;
+set_real_ip_from 94.131.111.196;
+set_real_ip_from 94.131.111.69;
+set_real_ip_from 94.131.111.73;
+set_real_ip_from 94.131.120.40;
 set_real_ip_from 94.140.115.63;
 set_real_ip_from 94.142.241.194;
 set_real_ip_from 94.142.244.16;
@@ -1828,5 +1835,4 @@ set_real_ip_from 95.211.244.28;
 set_real_ip_from 95.211.7.148;
 set_real_ip_from 95.216.145.1;
 set_real_ip_from 96.27.198.133;
-set_real_ip_from 96.42.26.63;
 set_real_ip_from 96.66.15.152;
