--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -11,6 +11,7 @@ allow 2001:41d0:2:9161::1;
 allow 2001:41d0:304:200::9dce;
 allow 2001:41d0:401:3200::3efd;
 allow 2001:41d0:404:300::dd2;
+allow 2001:41d0:601:1100::108e;
 allow 2001:41d0:700:10a2::;
 allow 2001:41d0:701:1100::205a;
 allow 2001:41d0:701:1100::38fc;
@@ -111,7 +112,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -124,7 +124,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -249,6 +248,7 @@ allow 2620:18c:0:192::136;
 allow 2620:18c:0:192::137;
 allow 2620:18c:0:192::138;
 allow 2620:18c:0:192::139;
+allow 2620:18c:0:192::140;
 allow 2620:18c:0:192::141;
 allow 2620:18c:0:192::142;
 allow 2620:18c:0:192::143;
@@ -257,6 +257,7 @@ allow 2620:18c:0:192::145;
 allow 2620:18c:0:192::146;
 allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
+allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
 allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
@@ -305,7 +306,6 @@ allow 2a01:5e0:36:cf2a::1;
 allow 2a01:6340:2:501::10;
 allow 2a01:6340:2:501::20;
 allow 2a01:7e00::f03c:91ff:fe56:2656;
-allow 2a01:7e00::f03c:91ff:fe78:b382;
 allow 2a01:7e00::f03c:93ff:fef8:bd9b;
 allow 2a01:7e01::f03c:93ff:fef8:bd60;
 allow 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -414,6 +414,7 @@ allow 2a05:541:122:49::1;
 allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
+allow 2a05:b0c7:6841::1;
 allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
@@ -638,7 +639,9 @@ allow 2a0b:f4c2::6;
 allow 2a0b:f4c2::7;
 allow 2a0b:f4c2::8;
 allow 2a0b:f4c2::9;
+allow 2a0c:2500:571:3d9:35a7:7ab0:9c7a:128a;
 allow 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
+allow 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 allow 2a0c:e300::23;
 allow 2a0d:3e83:1:b284::1;
 allow 2a0d:c2c0:1:4::2;
@@ -665,6 +668,9 @@ allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
 allow 2a10:1fc0:1::1078:9b3b;
+allow 2a10:1fc0:1::9a01:890f;
+allow 2a10:1fc0:1::ac76:4d41;
+allow 2a10:1fc0:1::d717:cb95;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
 allow 2a11:6100:0:22:a236:9fff:fe9e:36ea;
