--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,9 +111,9 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
+set_real_ip_from 128.31.0.13;
 set_real_ip_from 130.193.15.186;
 set_real_ip_from 130.193.15.79;
 set_real_ip_from 135.125.205.25;
@@ -133,9 +133,11 @@ set_real_ip_from 144.172.73.11;
 set_real_ip_from 144.172.73.6;
 set_real_ip_from 144.217.80.80;
 set_real_ip_from 144.24.197.112;
+set_real_ip_from 146.19.143.64;
 set_real_ip_from 146.19.143.82;
 set_real_ip_from 146.59.234.220;
 set_real_ip_from 146.59.35.246;
+set_real_ip_from 146.59.35.38;
 set_real_ip_from 149.202.79.129;
 set_real_ip_from 149.56.22.133;
 set_real_ip_from 149.56.44.47;
@@ -175,7 +177,6 @@ set_real_ip_from 171.25.193.78;
 set_real_ip_from 171.25.193.79;
 set_real_ip_from 171.25.193.80;
 set_real_ip_from 172.104.214.41;
-set_real_ip_from 172.104.243.155;
 set_real_ip_from 172.232.161.205;
 set_real_ip_from 172.232.161.206;
 set_real_ip_from 172.232.55.54;
@@ -192,7 +193,6 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
-set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
@@ -242,7 +242,6 @@ set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
 set_real_ip_from 185.10.16.41;
-set_real_ip_from 185.106.102.102;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.113.128.30;
@@ -497,7 +496,9 @@ set_real_ip_from 185.222.66.188;
 set_real_ip_from 185.225.69.203;
 set_real_ip_from 185.225.69.232;
 set_real_ip_from 185.227.134.106;
+set_real_ip_from 185.230.162.125;
 set_real_ip_from 185.230.162.218;
+set_real_ip_from 185.230.162.34;
 set_real_ip_from 185.233.100.23;
 set_real_ip_from 185.235.146.29;
 set_real_ip_from 185.239.71.160;
@@ -619,6 +620,7 @@ set_real_ip_from 192.46.227.185;
 set_real_ip_from 192.99.168.180;
 set_real_ip_from 193.105.134.150;
 set_real_ip_from 193.105.134.155;
+set_real_ip_from 193.109.120.85;
 set_real_ip_from 193.168.141.245;
 set_real_ip_from 193.189.100.194;
 set_real_ip_from 193.189.100.195;
@@ -635,7 +637,6 @@ set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.182;
-set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
@@ -684,6 +685,7 @@ set_real_ip_from 199.195.249.214;
 set_real_ip_from 199.195.250.165;
 set_real_ip_from 199.195.251.119;
 set_real_ip_from 199.195.251.78;
+set_real_ip_from 199.195.253.124;
 set_real_ip_from 199.195.253.156;
 set_real_ip_from 199.195.253.180;
 set_real_ip_from 199.195.253.247;
@@ -702,6 +704,7 @@ set_real_ip_from 2001:41d0:2:9161::1;
 set_real_ip_from 2001:41d0:304:200::9dce;
 set_real_ip_from 2001:41d0:401:3200::3efd;
 set_real_ip_from 2001:41d0:404:300::dd2;
+set_real_ip_from 2001:41d0:601:1100::108e;
 set_real_ip_from 2001:41d0:700:10a2::;
 set_real_ip_from 2001:41d0:701:1100::205a;
 set_real_ip_from 2001:41d0:701:1100::38fc;
@@ -802,7 +805,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -852,7 +854,6 @@ set_real_ip_from 213.95.149.22;
 set_real_ip_from 216.239.90.19;
 set_real_ip_from 216.73.159.101;
 set_real_ip_from 216.73.159.75;
-set_real_ip_from 217.12.215.167;
 set_real_ip_from 217.12.221.131;
 set_real_ip_from 217.146.2.41;
 set_real_ip_from 217.160.88.146;
@@ -866,6 +867,7 @@ set_real_ip_from 23.129.64.136;
 set_real_ip_from 23.129.64.137;
 set_real_ip_from 23.129.64.138;
 set_real_ip_from 23.129.64.139;
+set_real_ip_from 23.129.64.140;
 set_real_ip_from 23.129.64.141;
 set_real_ip_from 23.129.64.142;
 set_real_ip_from 23.129.64.143;
@@ -874,6 +876,7 @@ set_real_ip_from 23.129.64.145;
 set_real_ip_from 23.129.64.146;
 set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
+set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.210;
 set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
@@ -930,7 +933,6 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
-set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
@@ -951,7 +953,6 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::1;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
-set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1076,6 +1077,7 @@ set_real_ip_from 2620:18c:0:192::136;
 set_real_ip_from 2620:18c:0:192::137;
 set_real_ip_from 2620:18c:0:192::138;
 set_real_ip_from 2620:18c:0:192::139;
+set_real_ip_from 2620:18c:0:192::140;
 set_real_ip_from 2620:18c:0:192::141;
 set_real_ip_from 2620:18c:0:192::142;
 set_real_ip_from 2620:18c:0:192::143;
@@ -1084,6 +1086,7 @@ set_real_ip_from 2620:18c:0:192::145;
 set_real_ip_from 2620:18c:0:192::146;
 set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
+set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
 set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
@@ -1133,7 +1136,6 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
-set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1242,6 +1244,7 @@ set_real_ip_from 2a05:541:122:49::1;
 set_real_ip_from 2a05:b0c7:67b0::1;
 set_real_ip_from 2a05:b0c7:67bb::1;
 set_real_ip_from 2a05:b0c7:67c6::1;
+set_real_ip_from 2a05:b0c7:6841::1;
 set_real_ip_from 2a05:b0c7:6949::1;
 set_real_ip_from 2a05:b0c7:696c::1;
 set_real_ip_from 2a05:b0c7:6978::1;
@@ -1466,7 +1469,9 @@ set_real_ip_from 2a0b:f4c2::6;
 set_real_ip_from 2a0b:f4c2::7;
 set_real_ip_from 2a0b:f4c2::8;
 set_real_ip_from 2a0b:f4c2::9;
+set_real_ip_from 2a0c:2500:571:3d9:35a7:7ab0:9c7a:128a;
 set_real_ip_from 2a0c:2500:571:3d9:490b:80ce:9da2:c459;
+set_real_ip_from 2a0c:2500:571:3d9:5f6b:d5f4:a8cf:c713;
 set_real_ip_from 2a0c:e300::23;
 set_real_ip_from 2a0d:3e83:1:b284::1;
 set_real_ip_from 2a0d:c2c0:1:4::2;
@@ -1493,6 +1498,9 @@ set_real_ip_from 2a0f:df00:0:255::206;
 set_real_ip_from 2a0f:e586:f:f::133;
 set_real_ip_from 2a0f:e586:f:f::182;
 set_real_ip_from 2a10:1fc0:1::1078:9b3b;
+set_real_ip_from 2a10:1fc0:1::9a01:890f;
+set_real_ip_from 2a10:1fc0:1::ac76:4d41;
+set_real_ip_from 2a10:1fc0:1::d717:cb95;
 set_real_ip_from 2a10:8a40:f313::29;
 set_real_ip_from 2a10:c800:1:9cc6::1;
 set_real_ip_from 2a11:6100:0:22:a236:9fff:fe9e:36ea;
@@ -1514,7 +1522,7 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.193.118.250;
+set_real_ip_from 34.234.48.220;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1530,6 +1538,7 @@ set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
+set_real_ip_from 45.129.199.163;
 set_real_ip_from 45.132.246.245;
 set_real_ip_from 45.134.225.36;
 set_real_ip_from 45.135.132.20;
@@ -1712,7 +1721,6 @@ set_real_ip_from 82.221.131.71;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
-set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
@@ -1794,6 +1802,7 @@ set_real_ip_from 93.99.104.194;
 set_real_ip_from 94.102.51.15;
 set_real_ip_from 94.103.124.101;
 set_real_ip_from 94.103.124.104;
+set_real_ip_from 94.103.124.107;
 set_real_ip_from 94.103.124.121;
 set_real_ip_from 94.103.124.46;
 set_real_ip_from 94.103.124.90;
