--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -111,6 +111,7 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
+set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -193,6 +194,7 @@ set_real_ip_from 176.118.193.33;
 set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
+set_real_ip_from 176.58.121.177;
 set_real_ip_from 176.58.89.182;
 set_real_ip_from 178.170.37.11;
 set_real_ip_from 178.17.170.184;
@@ -637,6 +639,7 @@ set_real_ip_from 193.189.100.205;
 set_real_ip_from 193.189.100.206;
 set_real_ip_from 193.218.118.133;
 set_real_ip_from 193.218.118.182;
+set_real_ip_from 193.218.118.91;
 set_real_ip_from 193.233.133.109;
 set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
@@ -805,6 +808,7 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:7;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -830,10 +834,10 @@ set_real_ip_from 205.185.119.35;
 set_real_ip_from 205.185.121.170;
 set_real_ip_from 205.185.123.93;
 set_real_ip_from 205.185.124.176;
-set_real_ip_from 205.185.124.193;
 set_real_ip_from 208.109.215.188;
 set_real_ip_from 208.109.36.224;
 set_real_ip_from 209.141.32.198;
+set_real_ip_from 209.141.38.110;
 set_real_ip_from 209.141.40.44;
 set_real_ip_from 209.141.45.167;
 set_real_ip_from 209.141.46.203;
@@ -995,7 +999,6 @@ set_real_ip_from 2605:6400:10:c39:3b1c:a9d9:fb78:d7f1;
 set_real_ip_from 2605:6400:10:fa4:9e93:1da8:f7af:2e65;
 set_real_ip_from 2605:6400:20:104e::2;
 set_real_ip_from 2605:6400:20:170c::1;
-set_real_ip_from 2605:6400:20:1c01:7d33:a5db:c2b9:1092;
 set_real_ip_from 2605:6400:20:2417::69;
 set_real_ip_from 2605:6400:20:3ea:c2a3:1162:7224:e5df;
 set_real_ip_from 2605:6400:20:482:3920:1829:1839:1293;
@@ -1136,6 +1139,7 @@ set_real_ip_from 2a01:5e0:36:cf2a::1;
 set_real_ip_from 2a01:6340:2:501::10;
 set_real_ip_from 2a01:6340:2:501::20;
 set_real_ip_from 2a01:7e00::f03c:91ff:fe56:2656;
+set_real_ip_from 2a01:7e00::f03c:91ff:fe78:b382;
 set_real_ip_from 2a01:7e00::f03c:93ff:fef8:bd9b;
 set_real_ip_from 2a01:7e01::f03c:93ff:fef8:bd60;
 set_real_ip_from 2a02:13f0:8100:6:205:ce4a:e2d2:1;
@@ -1522,7 +1526,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.234.48.220;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1536,6 +1539,7 @@ set_real_ip_from 37.27.20.230;
 set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.218.157.154;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.163;
@@ -1636,19 +1640,25 @@ set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
+set_real_ip_from 5.255.100.151;
 set_real_ip_from 5.255.100.219;
+set_real_ip_from 5.255.100.26;
 set_real_ip_from 5.255.101.10;
 set_real_ip_from 5.255.101.131;
+set_real_ip_from 5.255.102.20;
 set_real_ip_from 5.255.103.190;
 set_real_ip_from 5.255.103.235;
 set_real_ip_from 5.255.111.64;
+set_real_ip_from 5.255.112.5;
 set_real_ip_from 5.255.115.42;
 set_real_ip_from 5.255.115.58;
 set_real_ip_from 5.255.117.56;
+set_real_ip_from 5.255.121.189;
 set_real_ip_from 5.255.124.150;
 set_real_ip_from 5.255.125.196;
 set_real_ip_from 5.255.125.41;
 set_real_ip_from 5.255.127.222;
+set_real_ip_from 5.255.127.36;
 set_real_ip_from 5.255.97.221;
 set_real_ip_from 5.255.98.151;
 set_real_ip_from 5.255.98.23;
@@ -1721,6 +1731,7 @@ set_real_ip_from 82.221.131.71;
 set_real_ip_from 83.217.9.73;
 set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
+set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
 set_real_ip_from 84.211.225.54;
 set_real_ip_from 84.239.46.144;
